--- a/http/src/App.css
+++ b/http/src/App.css
@@ -22,3 +22,9 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+body {
+  background-color: lightblue;
+  list-style-type: none;
+}
+
